# Labaratory_2

./: ASPM181.sln  ASPM181.vcxproj  ASPM181.vcxproj.filters  CMakeLists.txt  Initializations181.cpp  README.md  main181.cpp
.github/workflows/: cmake.yml
Debug/: ASPM181.exe.recipe  ASPM181.ilk  ASPM181.vcxproj.FileListAbsolute.txt  MatPart181_2.idb  MatPart181_2.lib  Math_Test_1.ilk  vc142.idb
Debug/ASPM181.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MatPart181_2/: CMakeLists.txt  MatPart181_2.vcxproj  MatPart181_2.vcxproj.filters  functions181.cpp  functions_arrays.cpp  functions_matrix181.cpp  funs_for_matrix_181.cpp  header_functions181.h
MatPart181_2/Debug/: MatPart181_2.lastbuildstate
MatPart181_2/Debug/MatPart181_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MatPart181_2.lastbuildstate
Math_Test_1/Debug/: Math_Test_1.exe.recipe
Math_Test_1/Debug/Math_Test_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  (+5 more)
MyTest/: CMakeLists.txt  myTest.cpp
Test/: Test.vcxproj  test.cpp
doc/: Doxyfile
doc/html/: _initializations181_8cpp.html  _r_e_a_d_m_e_8md.html  dir_c83801b806dcbd01f8ab6ffda46fbbb7.html  files.html  functions__arrays_8cpp.html  functions__matrix181_8cpp.html  globals.html  globals_func.html  header181_8h.html  header181_8h_source.html  index.html  main181_8cpp.html  md__d___b_e_t_a_tehn_progr__l_a_s_t__labaratory_2__r_e_a_d_m_e.html  pages.html
(+13 files in other folders)
